--- a/package.json
+++ b/package.json
@@ -36,6 +36,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/KARONAGAMING/musicard.git"
+    "url": "https://github.com/KARONAGAMING/plengcard"
   }
 }
