--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "discord",
     "discord-canvas"
   ],
-  "author": "FlameFace",
+  "author": "KARONAGAMING",
   "license": "MIT",
   "dependencies": {
     "@napi-rs/canvas": "^0.1.44",
